RESOLVED FIXED22823
REGRESSION (TOT): Canvas is broken in high dpi mode
https://bugs.webkit.org/show_bug.cgi?id=22823
Summary REGRESSION (TOT): Canvas is broken in high dpi mode
Oliver Hunt
Reported 2008-12-12 05:57:43 PST
<rdar://problem/6432739> I was working on another canvas issue and I realised the somewhere in the canvas refactorings of the past few months canvas lost the code that correctly scaled to handle high dpi display modes * STEPS TO REPRODUCE 1. Use Quartz Debug to change the display scale to 2x 2. Launch Safari (ToT) -- Safari must be launched *after* step 1 3. Go to http://nerget.com/tests/canvas-high-dpi.html
Attachments
Fix initial context scale (2.01 KB, patch)
2008-12-12 06:02 PST, Oliver Hunt
ap: review+
Oliver Hunt
Comment 1 2008-12-12 06:02:27 PST
Created attachment 25979 [details] Fix initial context scale Patcheration
Alexey Proskuryakov
Comment 2 2008-12-12 06:05:42 PST
Comment on attachment 25979 [details] Fix initial context scale + m_imageBuffer->context()->scale(FloatSize(size.width()/unscaledSize.width(), size.height()/unscaledSize.height())); Please add spaces around '/'. + transform.scale(size.width()/unscaledSize.width(), size.height()/unscaledSize.height()); Ditto. r=me
Oliver Hunt
Comment 3 2008-12-12 06:11:48 PST
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/html/HTMLCanvasElement.cpp Committed r39240
Note You need to log in before you can comment on or make changes to this bug.