REGRESSION: Canvas is broken in high dpi mode <rdar://problem/6432739> <https://bugs.webkit.org/show_bug.cgi?id=22823>

Reviewed by Alexey Proskuryakov.

Simply made sure that we correctly scale the graphics context to
account for the difference between logical and buffer resolution.


Canonical link: https://commits.webkit.org/31444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39240 268f45cc-cd09-0410-ab3c-d52691b4dbfc